Fri Oct 15 01:55:39 2004  Tim Janik  <timj@gtk.org>

	* configure.in: define BIN_VERSION to be used for version snippets in
	path names and binaries. adapted depending sources.

Fri Oct 15 00:55:08 2004  Tim Janik  <timj@gtk.org>

	* tests/audio/Makefile.am: cleanups.

	* tests/audio/featuretest.sh: 
	s/featuretest.status.sh/featuretest.status.sh/ according to a comment
	from stefan.

Wed Oct 13 19:46:34 2004  Tim Janik  <timj@gtk.org>

	* tests/latency/bseplay.scm: added BSE file play script missing
	for latency test.

Wed Oct 13 18:57:17 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* tests/audio/Makefile.am:
	* tests/audio/featuretest.sh: Get rid of seperate .test files by
	moving the information which tests need to be performed into the
	Makefile.

	* tests/audio/bseadder.test.reference:
	* tests/audio/bseadder.test: Removed, obsoled.

	* tests/audio/bseadder.reference: Same reference data, different name.

	* tests/audio/README: Documentation updated.

	* tools/bsefcompare.cc: Pretty-printing: added spaces between
	similarities.

Tue Oct 12 09:54:37 2004  Tim Janik  <timj@gtk.org>

	* docs/generated/scandocs.pl: fixed comment reading by using the
        comment parsing logic from glib-mkenums.pl.
        fixed function declaration reader getting confused by certain
        comments. added markup around URLs.

Fri Oct  8 18:34:51 2004  Tim Janik  <timj@gtk.org>

	* bsttracksynthdialog.[hc]: added candidate and wave repo label and
	tooltip handling. support cleanup callback. disable object type column
	for non devel modes.

	* beast-gtk/bsttrackview.c: provide proper labels and tooltips when 
	popping up track synth selectiong. fixed pnet editability handling.

	* beast-gtk/bstapp.c:
	* beast-gtk/bstprocedure.c:
	* beast-gtk/bstusermessage.c: disable GXK_DIALOG_WINDOW_GROUP, most
	modal dialogs in beast depend on global modality.

	* beast-gtk/bstitemseqdialog.[hc]: minor cleanups.

Fri Oct  8 14:30:33 2004  Tim Janik  <timj@gtk.org>
