@@ -7,6 +7,8 @@ Overview of Changes in BEAST/BSE 0.6.3:
   DavBassFilter           - added trigger input for use in instruments
 * Dialog size and resizing adaptions for 800x600 screens
 * Consistent support for dialog closing with Escape 
+* Fixed parsing of negative control events and note fine tune
+* Fixed stereo playback in sample editor
 * Fixed undo/redo handling across playback activation
 * Fixed error handling when users form cyclic connections
 * Lots of miscellaneous bug fixes
