@@ -1,3 +1,8 @@
+Fri Oct 15 03:53:47 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstplayback.[hc]: create a second wave oscillator to handle
+	palyback of stereo samples correctly. 
+
 Fri Oct 15 01:55:39 2004  Tim Janik  <timj@gtk.org>
 
 	* configure.in: define BIN_VERSION to be used for version snippets in
